--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Access Directory
-      run: cd workshop-tonkotsu-nodejs
-    - name: Run Build
-      run: |
-        cd workshop-tonkotsu-nodejs
-        npm install
-    - name: Run Tests
-      run: npm test
+      - uses: actions/checkout@v1
+      - name: Run Build
+        run: npm install
+      - name: Run Tests
+        run: npm test
